chore: packge.json homepage 필드 추가

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Animation effect built with React + TypeScript and Framer Motion.",
   "license": "MIT",
   "version": "0.0.0",
+  "homepage": "https://emayom.github.io/glowmoji",
   "repository": {
     "type": "git",
     "url": "https://github.com/emayom/glowmoji"
