--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lint-staged": "^15.4.3",
     "stylelint": "^16.14.1",
     "stylelint-config-standard": "^37.0.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
